# esp32-smol-issue

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
