cargo-features = ["strip"]

[package]
name = "esp32-smol-issue"
version = "0.1.0"
authors = ["Anthony Canino <git@anthonycanino.com>"]
edition = "2021"

[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }

[profile.release]
opt-level = "s"
debug = false
panic = "abort"
strip = true
lto = true
codegen-units = 1

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
native = ["esp-idf-sys/native"]
experimental = ["esp-idf-svc/experimental"]#, "esp-idf-hal/experimental", "embedded-svc/experimental"]

default = ["native", "experimental"]

[dependencies]
anyhow = "1.0.53"
embedded-svc = "^0.16.5"
esp-idf-svc = "^0.36.7"
esp-idf-sys = { version = "0.30.4", features = ["binstart"] }
smol = "1.2.5"


[build-dependencies]
embuild = "0.28.4"
anyhow = "1.0.53"
